testdata/baselines/reference/submodule/compiler/defaultPropsEmptyCurlyBecomesAnyForJs.errors.txt
typed_component.ts(5,20): error TS2339: Property 'x' does not exist on type '{}'.
typed_component.ts(6,20): error TS2339: Property 'y' does not exist on type '{}'.
typed_component.ts(7,20): error TS2339: Property 'value' does not exist on type '{}'.


==== library.d.ts (0 errors) ====
    export class Foo<T = {}, U = {}> {
        props: T;
        state: U;
        constructor(props: T, state: U);
    }
    
==== component.js (0 errors) ====
    import { Foo } from "./library";
    export class MyFoo extends Foo {
        member;
    }
    
==== typed_component.ts (3 errors) ====
    import { MyFoo } from "./component";
    export class TypedFoo extends MyFoo {
        constructor() {
            super({x: "string", y: 42}, { value: undefined });
            this.props.x;
                       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
            this.props.y;
                       ~
!!! error TS2339: Property 'y' does not exist on type '{}'.
            this.state.value;
                       ~~~~~
!!! error TS2339: Property 'value' does not exist on type '{}'.
            this.member;
        }
    }